# ecat-middleware-advr

./: .gitignore  .gitmodules  CMakeLists.txt
advrf_middleware_core/: package.xml
advrf_middleware_core/cmake/: advrf_middleware_coreConfig.cmake.in
advrf_middleware_core/include/advrf_middleware_core/: mw_adapter.hpp  pdo_utils.hpp
ecat/ecat_master_future/: CMakeLists.txt  package.xml
ecat/ecat_master_future/cmake/: ecat_master_futureConfig.cmake.in
ecat/ecat_master_future/config/: robot.yaml
ecat/ecat_master_future/config/robot/: kyon.yaml  pegasus.yaml
ecat/ecat_master_future/include/ecat_master_future/: shm_shared_types.hpp  shm_utils.hpp
ecat/ecat_master_future/src/: producer.cpp  shm_shared_types.cpp
interfaces/advrf_interfaces_dds/: CMakeLists.txt  package.xml  packages.xml
interfaces/advrf_interfaces_dds/cmake/: advrf_interfaces_ddsConfig.cmake.in  run_fastddsgen.cmake
interfaces/advrf_interfaces_dds/idl/advrf_interfaces/msg/: AuxPdo.idl  CtrlCmd.idl  EcatMasterCmd.idl  Enums.idl  FlashCmd.idl  FoeMaster.idl  ForceTorque.idl  Gains.idl  Gripper.idl  Imu.idl  KeyValStr.idl  Motor.idl  MotorsPdoCmd.idl  PdoAuxCmd.idl  PowerBoard.idl  Pump.idl  SlaveObjd.idl  SlaveRegistryWrite.idl  SlaveSdoCmd.idl  SlaveSdoInfo.idl  TmStats.idl  TrajectoryCmd.idl  TrjQueueCmd.idl  TrjStatus.idl  Valve.idl
interfaces/advrf_interfaces_protobuf/: CMakeLists.txt  package.xml
interfaces/advrf_interfaces_protobuf/cmake/: advrf_interfaces_protobufConfig.cmake.in
interfaces/advrf_interfaces_protobuf/msg/: cia402.proto  ecat_pdo.proto  repl_cmd.proto
interfaces/dds/: CMakeLists.txt
interfaces/dds/cmake/: advrf_interfacesConfig.cmake.in  advrf_interfaces_ddsConfig.cmake.in
interfaces/dds/idl/: Pump.idl
interfaces/dds/idl/services/: Trigger.idl
interfaces/dds/idl/std_msgs/msg/: Header.idl
interfaces/protobuf_msgs/: CMakeLists.txt  package.xml
interfaces/protobuf_msgs/cmake/: protobuf_msgsConfig.cmake.in
interfaces/protobuf_msgs/msg/: ecat_pdo.proto  generic.proto  hyq.proto  power_pack_pdo.proto  repl_cmd.proto
lib/ecat-master-future/: CMakeLists.txt  package.xml
lib/ecat-master-future/cmake/: ecat-master-futureConfig.cmake.in
lib/ecat-master-future/config/robot/: kyon.yaml
lib/ecat-master-future/include/: shm_shared_types.hpp  shm_utils.hpp
lib/ecat-master-future/include/ecat_master_future/: shm_shared_types.hpp  shm_utils.hpp
lib/ecat-master-future/protobuf/: CMakeLists.txt  ft6_pdo.proto  gripper_pdo.proto  imu.proto  imu_pdo.proto  motor.proto  motor_pdo.proto  msg_header.proto  time.proto
lib/ecat-master-future/protobuf/cmake/: protobuf_msgsConfig.cmake.in
lib/ecat-master-future/src/: producer.cpp  shm_shared_types.cpp  shm_utils.cpp
plugins/: CMakeLists.txt
plugins/advrf_cyclonedds_lib/: CMakeLists.txt  package.xml
plugins/advrf_cyclonedds_lib/cmake/: advrf_cyclonedds_libConfig.cmake.in
plugins/advrf_cyclonedds_plugin/: CMakeLists.txt  package.xml
plugins/advrf_cyclonedds_plugin/cmake/: advrf_cyclonedds_pluginConfig.cmake.in
plugins/advrf_cyclonedds_plugin/include/advrf_cyclonedds_plugin/: converter.hpp  publisher.hpp
plugins/advrf_cyclonedds_plugin/src/: dds_adapter_service.cpp  parameter_make_get.cpp  parameter_server.cpp  plugin.cpp  publisher.cpp  service_server.cpp  service_server_cmd.cpp
plugins/advrf_cyclonedds_plugin/test/examples/: CMakeLists.txt
plugins/advrf_cyclonedds_plugin/test/unit/: CMakeLists.txt
plugins/advrf_fastdds_lib/: CMakeLists.txt  package.xml
plugins/advrf_fastdds_lib/cmake/: advrf_fastdds_libConfig.cmake.in
plugins/advrf_fastdds_plugin/: CMakeLists.txt  package.xml
plugins/advrf_fastdds_plugin/cmake/: run_fastddsgen.cmake
plugins/advrf_fastdds_plugin/examples/: CMakeLists.txt  imu_publisher.cpp
plugins/advrf_fastdds_plugin/include/: publisher.hpp
plugins/advrf_fastdds_plugin/include/advrf_fastdds_plugin/: converter.hpp
plugins/advrf_fastdds_plugin/src/: main.cpp
plugins/advrf_middleware_core/: CMakeLists.txt  package.xml
plugins/advrf_middleware_core/cmake/: advrf_middleware_coreConfig.cmake.in
plugins/advrf_middleware_core/config/robot/: pegasus.yaml
plugins/advrf_middleware_core/include/advrf_middleware_core/: pdo_utils.hpp
plugins/advrf_zenoh_lib/: CMakeLists.txt  package.xml
plugins/advrf_zenoh_lib/cmake/: advrf_zenoh_libConfig.cmake.in
plugins/advrf_zenoh_plugin/: CMakeLists.txt  package.xml
plugins/advrf_zenoh_plugin/examples/: CMakeLists.txt  pub.cpp  sub.cpp
plugins/advrf_zenoh_plugin/examples/001_protobuf/: 001_pub.cpp  001_sub.cpp  CMakeLists.txt
plugins/advrf_zenoh_plugin/examples/002_cdr/: 002_pub.cpp  002_sub.cpp  CMakeLists.txt
plugins/advrf_zenoh_plugin/include/: cdr_converter.hpp
plugins/advrf_zmq_lib/: CMakeLists.txt  package.xml
plugins/advrf_zmq_lib/cmake/: advrf_zmq_libConfig.cmake.in
plugins/advrf_zmq_plugin/: CMakeLists.txt  package.xml
plugins/advrf_zmq_plugin/examples/: CMakeLists.txt  client.cpp  server.cpp
plugins/cyclone-dds/: CMakeLists.txt  pckages.xml
plugins/cyclone-dds/cmake/: advrf_cyclonedds_pluginConfig.cmake.in  ecat_plugin_cycloneddsConfig.cmake.in
plugins/cyclone-dds/config/: kyon.yaml
plugins/cyclone-dds/idl/: ForceTorque.idl  Header.idl  Imu.idl  JointState.idl  PowerBoard.idl  Quaternion.idl
plugins/cyclone-dds/include/: node.hpp  parameter.hpp  parameter_server.hpp  publisher.hpp  service.hpp
plugins/cyclone-dds/include/config/: config_topics.hpp
plugins/cyclone-dds/include/parameter/: parameter_client.hpp  parameter_entry.hpp  parameter_options.hpp  parameter_registry.hpp  parameter_result.hpp  parameter_server.hpp  parameter_service.hpp
plugins/cyclone-dds/src/: main.cpp  parameter_client.cpp  parameter_make_get.cpp  parameter_server.cpp  publisher.cpp  service.cpp
plugins/cyclone-dds/test/examples/: CMakeLists.txt
plugins/cyclone-dds/test/unit/: CMakeLists.txt
plugins/fast-dds/idl/: Motor.idl  Pump.idl  Time.idl  Valve.idl  Vector3.idl  Wrench.idl
plugins/fast-dds/include/: publisher.hpp
tools/shm_debug/: CMakeLists.txt  package.xml
tools/shm_debug/src/: reader.cpp  writer.cpp
(+109 files in other folders)
