<?xml version="1.0"?>
<package format="3">
  <name>ecat_master_future</name>
  <version>1.0.0</version>
  <description>ECAT master future shared-memory utilities.</description>

  <maintainer email="hugo.pousseur@iit.it">Hugo POUSSEUR</maintainer>
  <maintainer email="manuel.deluchi@iit.it">Manuel DELUCHI</maintainer>
  <license>TODO</license>
  
  <depend>advrf_interfaces_protobuf</depend>
  <depend>advrf_middleware_core</depend>
  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>