<?xml version="1.0"?>
<package format="3">
  <name>advrf_interfaces_protobuf</name>
  <version>1.0.0</version>
  <description>Generated protobuf message library.</description>

  <maintainer email="hugo.pousseur@iit.it">Hugo POUSSEUR</maintainer>
  <maintainer email="manuel.deluchi@iit.it">Manuel DELUCHI</maintainer>
  <license>TODO</license>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>protobuf</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>